[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tweety-ns"
version = "2.4.1"
description = "An easy Twitter Scraper"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tayyab Kharl", email = "tayyabmahr@gmail.com" }]
keywords = ["TWITTER", "TWITTER SCRAPE", "SCRAPE TWEETS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4[lxml]>=4.12,<5",
    "httpx[http2]>=0.27,<1",
    "openpyxl>=3.1,<4",
    "dateutils>=0.6,<1",
    "anticaptchaofficial>=1.0,<2",
    "capsolver>=1.0,<2",
    "2captcha-python>=1.2,<2",
    "python-magic>=0.4,<1",
    "python-magic-bin>=0.4,<1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/mahrtayyab/tweety"
"Bug Tracker" = "https://github.com/mahrtayyab/tweety/issues"
Documentation = "https://mahrtayyab.github.io/tweety_docs/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src"]
extend-exclude = [
    "tests/test_basic.py",
    "tests/test_authenticated.py",
    "tests/test_comprehensive.py",
    "tests/test_profile_images.py",
    "tests/demo.py",
    "run_tests.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long
    "B006",  # mutable argument default (legacy API, would be breaking to change)
    "B007",  # unused loop variable
    "B008",  # function call in default arg
    "B028",  # no explicit stacklevel (warnings)
    "B904",  # raise-without-from-inside-except
    "F841",  # unused local variable (legacy dead code)
    "S101",  # assert (used in tests)
    "S105",  # hardcoded password string (false positives on constants)
    "S110",  # try-except-pass
    "S112",  # try-except-continue
    "S311",  # non-crypto random (used for tokens, ok here)
    "S324",  # md5 (used for content hashing, not security)
    "S602",  # subprocess shell=True (ffmpeg invocation, trusted inputs)
    "UP006", # non-pep585 annotation (keep for Python 3.9 compat)
    "UP007", # non-pep604 union (same reason)
    "UP028", # yield-in-for-loop
    "UP035", # deprecated-import
    "UP022", # replace stdout/stderr w/ capture_output
    "UP036", # outdated version block
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E402"]
"src/tweety/constants.py" = ["E501"]
"**/__init__.py" = ["F401", "F403", "E402"]
"src/tweety/exceptions_.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
files = ["src/tweety"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
